--- a/ShapeMaker/src/shapemaker/ShapesGUI.form
+++ b/ShapeMaker/src/shapemaker/ShapesGUI.form
@@ -175,6 +175,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Resize"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnresizeActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnquit">
           <Properties>
